integrated mongo database
added Admin Role and admin seeder + registration endpoint and adapted the auth to the database.
TODO: adapt the tickets endpoint to the database with tickets model
